# Changelog

// Asciidoc template for a single table row. Copy the lines
// within //// ... //// over into the current, unreleased version
// table, select the proper icon (see legend at the bottom of this documents)
// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛🐣🗑️✨
|
| https://github.com/knative/client/pull/[#]
////

## v0.24.0 (2021-06-29)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Prettify printing of webhook warnings
| https://github.com/knative/client/pull/1353[#1353]

| ✨
| Update Kubernetes dependencies to v0.20.7
| https://github.com/knative/client/pull/1344[#1344]

| ✨
| Increase code coverage for Sources #1343
| https://github.com/knative/client/pull/1343[#1343]

| ✨
| Make e2e test run over other networks
| https://github.com/knative/client/pull/1339[#1339]

| 🎁
| Add `env-value-from` flag & keep order of env vars as provided
| https://github.com/knative/client/pull/1328[#1328]

| 🐛
| Fix Subscription's Channel to use KRefence type
| https://github.com/knative/client/pull/1326[#1326]
|===

## v0.23.0 (2021-05-18)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Fix number of instances *int32 type in describe commands
| https://github.com/knative/client/pull/1312[#1312]

| 🐛
| Use fully qualified test images
| https://github.com/knative/client/pull/1307[#1307]

| 🐣
| Fix for serviceaccounts "default" not found flaky issue
| https://github.com/knative/client/pull/1306[#1306]

| ✨
| Update Eventing Sources `APIServerSource, ContainerSource, SinkBinding` API to v1
| https://github.com/knative/client/pull/1299[#1299]

| ✨
| Update Eventing Source `PingSource` API to v1beta2
| https://github.com/knative/client/pull/1299[#1299]

| 🐛
| Fix documentation of the configuration options
| https://github.com/knative/client/pull/1297[#1297]

| ✨
| Drop --strict flag on ko
| https://github.com/knative/client/pull/1295[#1295]

| 🎁